[package]
name = "coordinate-transformer"
version = "1.5.0"
authors = ["azishio"]
edition = "2021"
description = "Provides functions and structures for converting geocentric Cartesian coordinates, latitude and longitude, JPR, and pixel coordinates."

documentation = "https://docs.rs/coordinate-transformer"
homepage = "https://crates.io/crates/coordinate-transformer"
repository = "https://github.com/azishio/coordinate-transformer-rs"

readme = "README.md"

keywords = ["longitude", "latitude", "jpr", "pixel"]
categories = ["mathematics", "science::geo"]
license = "MIT OR Apache-2.0"

[dev-dependencies]
close-to = "0.1.0"

[dependencies]
vec-x = { version = "0.2.0", optional = true }
